--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pwcgarage.ibeanconref"
+    package="com.pwcgarage.ibeaconref"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.pwcgarage.ibeanconref.MonitoringActivity"
+            android:name="com.pwcgarage.ibeaconref.MonitoringActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,9 +27,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.pwcgarage.ibeanconref.RangingActivity"
+            android:name="com.pwcgarage.ibeaconref.RangingActivity"
             android:label="@string/app_name" >
         </activity>
+
+        <service
+            android:name="org.altbeacon.beacon.service.BeaconService"
+            android:enabled="true"
+            android:exported="false"
+            android:isolatedProcess="false"
+            android:label="beacon" />
     </application>
 
 </manifest>
