Added settings menu

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.pwcgarage.ibeaconref.SettingsActivity"/>
+               
         <activity
             android:name="com.pwcgarage.ibeaconref.RangingActivity"
             android:label="@string/app_name" >
