--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/android-async-http-1.4.6.jar"/>
 	<classpathentry kind="lib" path="libs/otto-1.3.6.jar"/>
-	<classpathentry kind="lib" path="libs/amazon-device-messaging-1.0.1.jar"/>
+	<classpathentry kind="lib" path="libs/notification-hubs-0.4.jar"/>
+	<classpathentry kind="lib" path="libs/notifications-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
