--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-22
+target=Google Inc.:Google APIs:22
 android.library.reference.1=../../git/android-beacon-library
+android.library.reference.2=../../android-sdk-linux/extras/google/google_play_services/libproject/google-play-services_lib
